# samotics_assignment

./: .gitignore  README.md  ci_cd.sh  reset.sh
backend/: .dockerignore  .env.example  .gitignore  README.md  config.py  pyproject.toml
backend/app/: __init__.py  blueprints.py  extensions.py
backend/app/asset/: models.py  routes.py
backend/app/user/: auth.py  models.py  routes.py
backend/docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
backend/migrations/versions/: 30fc4178ab3f_remove_client_model.py  85c07972b87e_add_is_admin_to_users.py  9feb36960a9d_initial_schema.py  b98cfee55e5e_owner_as_user_foreign_key.py
backend/scripts/: ensure_db.py  is_seeded.py  seed.py
backend/tests/: conftest.py  test_assets_detail.py  test_assets_list.py  test_assets_update.py  test_auth.py  test_health.py  test_models.py
frontend/: README.md  angular.json  package-lock.json  package.json  proxy.conf.js
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/core/assets/: assets.models.ts  assets.service.spec.ts  assets.service.ts
frontend/src/app/core/auth/: auth.guard.spec.ts  auth.guard.ts  auth.interceptor.spec.ts  auth.interceptor.ts  auth.models.ts  auth.service.spec.ts  auth.service.ts
frontend/src/app/layout/top-bar/: top-bar.html  top-bar.scss  top-bar.spec.ts  top-bar.ts
frontend/src/app/pages/asset-detail/: asset-detail.html  asset-detail.scss  asset-detail.spec.ts  asset-detail.ts
frontend/src/app/pages/assets-list/: assets-list.html  assets-list.scss  assets-list.spec.ts  assets-list.ts
(+8 files in other folders)
