[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.31.0",
    "flasgger>=0.9.7.1",
    "flask-jwt-extended>=4.7.4",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask==3",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
